--- a/frontend/grid/style.css
+++ b/frontend/grid/style.css
@@ -1,3 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-size: 15px
+}
+/* header */
+header {
+    /* height: 30px; */
+    margin: 0;
+    padding: 0px 10px;
+    border-bottom: 1px solid #e4e4e4;
+}
+nav ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: end;
+}
+nav ul li a {
+    display: inline-block;
+    height: 100%;
+    color: blue;
+    text-decoration: none;
+    padding: 20px 10px;
+}
+nav ul li a:hover,
+nav ul li a:focus,
+nav ul li a:active {
+    background: blue;
+    color: #fff;
+}
+/* index.html */
 /* grid.html */
 .grid-layout {
     margin: 30px auto;
