--- a/frontend/grid/style.css
+++ b/frontend/grid/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 
 /* General style */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,6 +11,7 @@ body {
     font-size: 15px;
     font-family: 'Big Shoulders Display', sans-serif;
     font-weight: 700;
+    background: hsl(0, 0%, 95%);
 }
 p,
 button {
@@ -90,21 +92,23 @@ nav ul li a:active {
 }
 .car-heading {
     text-transform: uppercase;
+    color: hsl(0, 0%, 95%);
 }
 .car-text {
     font-size: 12px;
+    color: hsla(0, 0%, 100%, 0.75)
 }
 .car-btn {
     background-color: inherit;
-    border: 2px solid #fff;
-    color: #fff;
+    border: 2px solid hsl(0, 0%, 95%);
+    color: hsl(0, 0%, 95%);
     padding: 12px 30px;
     border-radius: 30px;
     width: max-content;
 }
 .car-btn:hover,
 .car-btn:focus {
-    background: #fff;
+    background: hsl(0, 0%, 95%);
 }
 .car.sedans .car-btn:hover,
 .car.sedans .car-btn:focus {
