--- a/frontend/free-trial/style.css
+++ b/frontend/free-trial/style.css
@@ -49,6 +49,9 @@ main {
     width: 100%;
     border-radius: 8px;
     margin: 2em 0;
+    box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
+    -webkit-box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
+    -moz-box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
 }
 .form--7-days .try {
     font-weight: 700;
@@ -56,7 +59,11 @@ main {
 .form {
     background: var(--white);
     padding: 20px;
-    border-radius: 10px 
+    border-radius: 10px;
+    
+    box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
+    -webkit-box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
+    -moz-box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
 }
 .free-trial--form {
 }
@@ -68,7 +75,7 @@ main {
     display: block;
 }
 .form--input-group input {
-    height: 45px;
+    height: 50px;
     width: 100%;
     border-radius: 5px;
     border: 1px solid var(--grayish-blue);
@@ -78,7 +85,7 @@ main {
 .form--input-group input:hover,
 .form--input-group input:focus,
 .form--input-group input:active {
-    border: 1px solid var(--blue);
+    border: 1px solid var(--dark-blue);
 }
 .form--input-group img {
     display: none;
@@ -107,10 +114,13 @@ main {
     color: var(--white);
     padding: 13px 0;
     border: none;
-    border: 1px solid var(--dark-blue);
+    border: 1px solid var(--grayish-blue);
     border-radius: 5px;
     text-transform: uppercase;
     font-size: 12px;
+    box-shadow: 0px 3px 0px -1px rgba(84,70,70,0.51);
+    -webkit-box-shadow: 0px 3px 0px -1px rgba(84,70,70,0.51);
+    -moz-box-shadow: 0px 3px 0px -1px rgba(84,70,70,0.51);
 }
 .terms-and-conditions {
     color: var(--grayish-blue);
