--- a/frontend/free-trial/style.css
+++ b/frontend/free-trial/style.css
@@ -23,6 +23,9 @@ body {
     color: var(--white);
     text-align: center;
 }
+button {
+    cursor: b v       cxvfgtr56435335y90oiudopointer;
+}
 .flow > *:where(:not(:first-child)) {
     margin-top: var(--flow-space, 1em);
 }
@@ -60,7 +63,6 @@ main {
     background: var(--white);
     padding: 20px;
     border-radius: 10px;
-    
     box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
     -webkit-box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
     -moz-box-shadow: 0px 7px 1px 0px rgba(0,0,0,0.09);
@@ -82,6 +84,9 @@ main {
     padding: 0 20px;
     outline: none;
 }
+.form--input-group.success input {
+    border: 2px solid var(--green);
+}
 .form--input-group input:hover,
 .form--input-group input:focus,
 .form--input-group input:active {
@@ -90,16 +95,16 @@ main {
 .form--input-group img {
     display: none;
 }
-.form--input-group img.error {
+.form--input-group.error img {
     display: block;
     position: absolute;
     top: 10px;
     right: 20px;
 }
-.error-msg {
+.form--input-group .error-msg {
     display: none;
 }
-.error-msg.error {
+.form--input-group.error .error-msg {
     display: block;
     color: var(--red);
     text-align: right;
@@ -128,6 +133,9 @@ main {
     background: var(--white);
     color: var(--green);
 }
+.claim:active {
+    transform: translateY(4px);
+}
 .terms-and-conditions {
     color: var(--grayish-blue);
     font-size: 8px;
@@ -137,7 +145,7 @@ main {
     color: var(--red);
     font-weight: 500;
 }
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 460px) {
     body {
         background-image: url('assets/bg-intro-desktop.png');
     }
@@ -167,5 +175,17 @@ main {
     }
     .form--7-days {
         margin-top: 0;
+    }
+}
+@media screen and (max-width: 760px) {
+    main {
+        margin: 5em 1em;
+    }
+    .free-trial {
+        gap: 2em;
+    }
+    .free-trial--heading {
+        font-size: 1.5em;
+        line-height: 1.2;
     }
 }
