--- a/frontend/huddle/style.css
+++ b/frontend/huddle/style.css
@@ -51,6 +51,7 @@ main {
 nav {
     padding: 40px 0;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 .logo {
@@ -129,9 +130,13 @@ section {
     max-height: 100%;
 }
 .footer--banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     --flow-space: 2em;
     background: var(--white);
-    width: 90%;
+    width: 100%;
     max-width: 600px;
     transform: translateY( 50%);
     margin: 0 auto;
@@ -141,14 +146,12 @@ section {
     text-align: center;
 }
 footer {
+    background: var(--dark-cyan);        
+    padding: calc( (var(--foot-banner-height) / 2) + 100px) 5em calc( (var(--foot-banner-height) / 2));
+    color: var(--white);
 }
 footer .logo {
     height: 30px;
-}
-.footer--links {
-}
-.footer--links .contact > div {
-
 }
 .footer--links .contact > div > * {
     display: flex;
@@ -156,9 +159,25 @@ footer .logo {
     align-items: center;
     align-self: flex-start;
 }
-.footer--links .contact > div > .img-icon {
+.socials {
+    display: flex;
 }
-.footer--links .contact > div > p {
+.socials--icon {
+    height: 28px;
+    width: 28px;
+    border: 1px solid var(--white);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.socials--icon:where(:not(:first-child)) {
+    margin-left: 10px;
+}
+.footer--copyright {
+    font-size: 8px;
+    margin: 2em auto;
+    text-align: right;
 }
 @media screen and (min-width: 375px) {
     .hero {
@@ -166,14 +185,6 @@ footer .logo {
     }
     .hero--intro-content {
         margin-right: 3.1em;
-    }
-    nav {
-        padding: 40px 0;
-    }
-    .logo {
-        height: 25px;
-    }
-    .nav-btn {
     }
     .hero--intro {
     }
@@ -238,10 +249,8 @@ footer .logo {
         max-height: 100%;
     }
     footer {
-        background: var(--dark-cyan);
         position: relative;
         z-index: -1;
-        padding: calc( (var(--foot-banner-height) / 2) + 100px) 5em calc( (var(--foot-banner-height) / 2));
         color: var(--white);
         text-align: left;
     }
@@ -274,7 +283,13 @@ footer .logo {
 }
 @media screen and (max-width: 760px) {
     section {
-        padding: 0 3em;
+        padding: 0 1.3em;
+    }
+    .info--card {
+        gap: 2em;
+    }
+    .footer--banner h2 {
+        font-size: 1.3em;
     }
     footer {
         padding-left: 2em;
@@ -298,7 +313,12 @@ footer .logo {
     }
 }
 @media screen and (min-width: 900px) {
-
+    nav {
+        padding: 40px 0;
+    }
+    .logo {
+        height: 25px;
+    }
     .hero--intro {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -316,7 +336,16 @@ footer .logo {
     }
 }
 @media screen and (max-width: 900px) {
-
+    nav {
+        padding: 40px 0;
+    }
+    .logo {
+        height: 15px;
+    }
+    .nav-btn {
+        font-size: 12px;
+        padding: 10px 30px;
+    }
     .hero--intro {
         text-align: center;
     }
@@ -331,13 +360,57 @@ footer .logo {
         padding: 3em 2em;
         display: flex;
         flex-direction: column;
-        gap: 5em;
+        gap: 2em;
         justify-content: center;
+    }
+    .info-card--img {
+        height: unset;
     }
     .info-card--text {
         align-items: center;
     }
     .info-card--text p {
         text-align: center;
+    }
+}
+@media screen and (max-width: 570px) {
+    .footer--banner h2 {
+        font-size: 1.1em;
+    }
+    .footer--links {
+        display: block
+    }
+    .footer--links > .contact {
+        margin-bottom: 50px;
+    }
+    .footer--links > .career {
+        margin-top: 1em;
+    }
+    .footer--links > .socials {
+        margin-top: 50px;
+        justify-content: center;
+    }
+    .footer--copyright {
+        font-size: 8px;
+        margin: 2em auto;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 450px) {
+    .footer--banner h2 {
+        font-size: 1em;
+    }
+}
+@media screen and (max-width: 375px) {
+    .footer--banner {
+        width: 110%;
+        margin: 0 -5%;
+        --foot-banner-height: 130px;
+    }
+    .footer--banner h2 {
+        font-size: 0.8em;
+    }
+    .footer--banner .get-started-btn {
+        padding: 1.1em 3em;
     }
 }
